--- a/html/adopt.html
+++ b/html/adopt.html
@@ -231,7 +231,7 @@
                             <input type="hidden" name="amount_2" value="9.00">
                             <button type="submit" class="btn btn-primary btn-lg">Make a Deposit</button>
                           </form>
-                          <span class="lead">&nbsp;or&nbsp;</span>
+                          <span class="lead py-3">&nbsp;or&nbsp;</span>
                           <form method="POST" action="https://www.paypal.com/cgi-bin/webscr">
                             <input type="hidden" name="cmd" value="_cart">
                             <input type="hidden" name="upload" value="1">
