under construction notice

--- a/html/home.html
+++ b/html/home.html
@@ -131,6 +131,7 @@
         <div class="row no-gutters justify-content-center py-md-4">
           <div class="col-md-10 col-lg-9 col-xl-8 p-3 py-md-5">
             <span class="h1 d-block text-danger">Welcome to our New Website!</span>
+            <span class="h3 d-block text-danger">Some features are still under construction.</span>
             <span class="h2 d-block">Welcome to Trails and Tails Doodles!</span>
             <p class="lead"> Our dogs are adventurous joyful souls that live in our home with us and are part of our family. When you choose a puppy from us, you are gaining a loyal, affectionate family member.</p>
             <p class="lead">We start each puppy off on the right paw with <a href="#">Early Neurological Stimulation</a> and we send a copy of "My Smart Puppy" home with you.</p>
