fix links home.html

--- a/html/home.html
+++ b/html/home.html
@@ -136,7 +136,7 @@
             <p class="lead"> Our dogs are adventurous joyful souls that live in our home with us and are part of our family. When you choose a puppy from us, you are gaining a loyal, affectionate family member.</p>
             <p class="lead">We start each puppy off on the right paw with <a href="#">Early Neurological Stimulation</a> and we send a copy of "My Smart Puppy" home with you.</p>
             <p class="lead">We are focused on red Goldendoodle puppies. We think our reds are stunning, and we hope you do too.</p>
-            <a href="#" class="btn btn-lg btn-primary rounded">Available Puppies</a>
+            <a href="puppies.html" class="btn btn-lg btn-primary rounded">Available Puppies</a>
           </div>
         </div>
       </div>
@@ -151,7 +151,7 @@
           <div class="col-md-10 col-lg-9 col-xl-8 p-3 py-md-5">
             <span class="h2 d-block">Our Puppies</span>
             <p class="lead">We breed Goldendoodle puppies from superior quality lines. Our puppies make great family pets due to their non-shedding coats and their friendly out-going personalities.</p>
-            <a href="#" class="btn btn-lg btn-primary rounded">How to Adopt?</a>
+            <a href="adopt.html" class="btn btn-lg btn-primary rounded">How to Adopt?</a>
           </div>
         </div>
       </div>
@@ -169,7 +169,7 @@
               <i class="material-icons text-warning">star</i>
             </div>
             <span class="h4 d-block text-white text-justify">&ldquo;Chip has been such a great addition to our family! He is the sweetest dog and so kind and gentle with our kids. He is so energetic and always so happy to see us. We love him so much! Thanks Diane!&rdquo; - Lisa B</span>
-            <span><a href="#">Read More Testimonials</a></span>
+            <span><a href="testimonials.html">Read More Testimonials</a></span>
           </div>
           <div class="col-3 mt-md-4 mt-lg-0">
             <img class="d-none d-md-block rounded-circle" src="assets/img/chip.jpg" alt="Image">
@@ -195,11 +195,11 @@
         <div class="row">
           <div class="col-12 col-md-4 d-flex">
             <div class="card shadow-lg">
-              <a href="#">
+              <a href="adopt.html">
                 <img class="card-img-top" src="assets/img/home-microchip.jpg" alt="Free Microchip">
               </a>
               <div class="card-body py-3">
-                <a href="#">
+                <a href="adopt.html">
                   <h5>Free Microchip</h5>
                 </a>
                 <div class="mb-4 text-justify">
@@ -211,11 +211,11 @@
           
           <div class="col-12 col-md-4 d-flex">
             <div class="card shadow-lg">
-              <a href="#">
+              <a href="adopt.html">
                 <img class="card-img-top" src="assets/img/home-health.jpg" alt="2-Yr Health Guarantee">
               </a>
               <div class="card-body py-3">
-                <a href="#">
+                <a href="adopt.html">
                   <h5>Health Guarantee</h5>
                 </a>
                 <div class="mb-4 text-justify">
@@ -227,11 +227,11 @@
 
           <div class="col-12 col-md-4 d-flex">
             <div class="card shadow-lg">
-              <a href="#">
+              <a href="adopt.html">
                 <img class="card-img-top" src="assets/img/home-vaccinations.jpg" alt="Puppy Vaccinations">
               </a>
               <div class="card-body py-3">
-                <a href="#">
+                <a href="adopt.html">
                   <h5>Puppy Vaccinations</h5>
                 </a>
                 <div class="mb-4 text-justify">
