social links in footer

--- a/html/home.html
+++ b/html/home.html
@@ -285,10 +285,10 @@
           </div>
           <div class="col-12 col-md-3">
             <ul class="list-social-links">
-              <li class="text-white"><a href="#"><i class="socicon-linkedin"></i></a></li>
-              <li class="text-white"><a href="#"><i class="socicon-facebook"></i></a></li>
-              <li class="text-white"><a href="#"><i class="socicon-instagram"></i></a></li>
-              <li class="text-white"><a href="#"><i class="socicon-youtube"></i></a></li>
+              <li class="text-white"><a href="https://www.linkedin.com/in/georgiadiane-hawkes-9a8598182"><i class="socicon-linkedin"></i></a></li>
+              <li class="text-white"><a href="https://www.facebook.com/trailsandtailsdoodles/"><i class="socicon-facebook"></i></a></li>
+              <li class="text-white"><a href="https://www.instagram.com/trailsandtailsdoodles/"><i class="socicon-instagram"></i></a></li>
+              <li class="text-white"><a href="https://www.youtube.com/channel/UCC_3QRQQv2sOBfW543nZPpA/channels"><i class="socicon-youtube"></i></a></li>
             </ul>
           </div>
         </div>
