--- a/html/testimonials.html
+++ b/html/testimonials.html
@@ -437,7 +437,7 @@
         <div class="container">
           <div class="row justify-content-around align-items-center">
             <div class="col-sm-6 col-lg-3 mb-3 mb-sm-0">
-              <img class="d-md-block rounded-circle shadow-lg" src="assets/img/monty.jpg" alt="Monty">
+              <img class="d-md-block rounded-circle shadow-lg" src="assets/img/monty.png" alt="Monty">
             </div>
             <div class="col-sm-6 col-lg-8">
               <i class="material-icons text-warning">star</i>
