--- a/html/adopt.html
+++ b/html/adopt.html
@@ -40,7 +40,7 @@
             <li class="dropdown">
               <a class="nav-link h5 dropdown-toggle" href="dogs.html" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" id="pages-dropdown">Our Dogs</a>
               <div class="dropdown-menu p-0 o-hidden" aria-labelledby="pages-dropdown">
-                  <a class="dropdown-item" href="dogs.html">Maiva &amp; Rio</a>
+                  <a class="dropdown-item" href="dogs.html">Meet The Parents</a>
                   <a class="dropdown-item" href="dogs.html#generations">Doodle Generations</a>
               </div>
             </li>
@@ -100,7 +100,7 @@
             <div class="card py-3 px-xl-3">
               <div class="card-body">
                 <span class="h6 d-block">Cost to Adopt</span>
-                <span class="d-block display-4 mb-2 text-dark">$2,300</span>
+                <span class="d-block display-4 mb-2 text-dark">$2,500</span>
                 <p>Customer responsible for all travel arrangements</p>
                 <form method="POST" action="https://www.paypal.com/cgi-bin/webscr">
                   <input type="hidden" name="cmd" value="_cart">
@@ -129,7 +129,7 @@
             <div class="card py-3 px-xl-3">
               <div class="card-body">
                 <span class="h6 d-block">Cost to Adopt <i>(incl. Airport Pickup)</i></span>
-                <span class="d-block display-4 mb-2 text-dark">$2,600</span>
+                <span class="d-block display-4 mb-2 text-dark">$2,800</span>
                 <p>We will meet you at the airport with everything you need</p>
                 <form method="POST" action="https://www.paypal.com/cgi-bin/webscr">
                   <input type="hidden" name="cmd" value="_cart">
@@ -161,7 +161,7 @@
             <div class="card py-3 px-xl-3">
               <div class="card-body">
                 <span class="h6 d-block">Cost to Adopt <i>(incl. Shipping)</i></span>
-                <span class="d-block display-4 text-dark mb-2">$2,750</span>
+                <span class="d-block display-4 text-dark mb-2">$2,950</span>
                 <p>We can also make arrangements to ship your puppy via air cargo</p>
                 <form method="POST" action="https://www.paypal.com/cgi-bin/webscr">
                   <input type="hidden" name="cmd" value="_cart">
