--- a/html/dogs.html
+++ b/html/dogs.html
@@ -40,7 +40,7 @@
             <li class="dropdown">
               <a class="nav-link h5 dropdown-toggle" href="dogs.html" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" id="pages-dropdown">Our Dogs</a>
               <div class="dropdown-menu p-0 o-hidden" aria-labelledby="pages-dropdown">
-                  <a class="dropdown-item" href="dogs.html">Maiva &amp; Rio</a>
+                  <a class="dropdown-item" href="dogs.html">Meet The Parents</a>
                   <a class="dropdown-item" href="dogs.html#generations">Doodle Generations</a>
               </div>
             </li>
@@ -167,8 +167,8 @@
                 <div>
                   <h3 class="mb-1 mt-2">F1B Generations</h3>
                   <hr>
-                  <p>An F1B Goldendoodle is an F1 Goldendoodle bred with a Poodle. F1B puppies are 75% Poodle and 25% Retriever, which makes this generation the most hypo-allergenic of all the Goldendoodle generations we breed. The F1B Goldendoodles have beautiful wavy to curly plush coats.</p>
-                  <p>Ginger is our F1 Goldendoodle. My puppies that are the result of the mating of Ginger and my red Moyen stud, Rio, are F1B Goldendoodles. They typically have soft curly coats.</p>
+                  <p>An F1B Goldendoodle is the result of breeding an F1 Goldendoodle with a Poodle. F1B puppies are 75% Poodle and 25% Retriever, which makes this generation the most hypo-allergenic of all the Goldendoodle generations we breed. The F1B Goldendoodles have beautiful wavy to curly plush coats.</p>
+                  <p>Willow is our F1 Goldendoodle. My puppies that are the result of the mating of Ginger and my red Moyen stud, Rio, are F1B Goldendoodles. They typically have soft curly coats.</p>
                 </div>
               </div>
             </div>
