--- a/html/puppies.html
+++ b/html/puppies.html
@@ -40,7 +40,7 @@
             <li class="dropdown">
               <a class="nav-link h5 dropdown-toggle" href="dogs.html" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" id="pages-dropdown">Our Dogs</a>
               <div class="dropdown-menu p-0 o-hidden" aria-labelledby="pages-dropdown">
-                  <a class="dropdown-item" href="dogs.html">Maiva &amp; Rio</a>
+                  <a class="dropdown-item" href="dogs.html">Meet The Parents</a>
                   <a class="dropdown-item" href="dogs.html#generations">Doodle Generations</a>
               </div>
             </li>
@@ -121,7 +121,52 @@
     </section>
     
     <section class="bg-dark">
-      <div class="container">
+      <div class="container py-3">
+        <div class="row">
+          <div class="col align-self-center mb-3 mb-lg-0">
+            <div class="pr-lg-0">
+              <span class="h2 d-block text-white">F1B Mini/Medium Red Goldendoodles</span>
+              <ul>
+                <li class= "lead mb-1 text-white">
+                  <p><strong>Parents:</strong><span> Mavia &amp; Rio</span></p>
+                </li>
+                <li class= "lead mb-1 text-white">
+                  <p><strong>Est. Birth:</strong><span> April 15, 2020</span></p>
+                </li>
+                <li class= "lead mb-1 text-white">
+                  <p><strong>Est. Take Home:</strong><span> June 13, 2020</span></p>
+                </li>
+                <li class= "lead mb-1 text-white">
+                  <p><strong>Est. Adult Weight:</strong><span> 32-35 lbs.</span></p>
+                </li>
+                <li class= "lead mb-1 text-white">
+                  <p><strong>Colors:</strong><span> Medium Red to Dark Red</span></p>
+                </li>
+                <li class= "lead mb-1 text-white">
+                  <p><strong>Status:</strong><span class="text-success"><strong> TAKING DEPOSITS</strong></span></p>
+                </li>
+              </ul>
+            </div>
+          </div>
+          <div class="col-lg-4">
+              <div class="mb-2 d-lg-flex">
+                <img class="card-img flex-lg-grow-1" src="assets/img/willow.jpg" alt="Maiva" />
+              </div>
+              <div class="d-lg-flex">
+                <p class="h3 text-white">Willow<span class="lead"> - F1 Goldendoodle</span></p>
+              </div>
+          </div>
+          <div class="col-lg-4">
+              <div class="mb-2 d-lg-flex">
+                <img class="card-img flex-lg-grow-1" src="assets/img/rio.jpg" alt="Rio" />
+              </div>
+              <div class="d-lg-flex">
+                <p class="h3 text-white">Rio<span class="lead"> - AKC Moyen Poodle</span></p>
+              </div>
+          </div>
+        </div>
+      </div>
+      <div class="container py-3">
         <div class="row">
           <div class="col align-self-center mb-3 mb-lg-0">
             <div class="pr-lg-0">
@@ -131,19 +176,19 @@
                   <p><strong>Parents:</strong><span> Mavia &amp; Rio</span></p>
                 </li>
                 <li class= "lead mb-1 text-white">
-                  <p><strong>Born:</strong><span> Mavia &amp; Rio</span></p>
+                  <p><strong>Est. Birth:</strong><span> June 29, 2020</span></p>
                 </li>
                 <li class= "lead mb-1 text-white">
-                  <p><strong>Take Home:</strong><span> Mavia &amp; Rio</span></p>
+                  <p><strong>Est. Take Home:</strong><span> August 25, 2020</span></p>
                 </li>
                 <li class= "lead mb-1 text-white">
-                  <p><strong>Expected Weight:</strong><span> Mavia &amp; Rio</span></p>
+                  <p><strong>Est. Adult Weight:</strong><span> 42-47 lbs.</span></p>
                 </li>
                 <li class= "lead mb-1 text-white">
-                  <p><strong>Colors:</strong><span> Mavia &amp; Rio</span></p>
+                  <p><strong>Colors:</strong><span> Tan, Light Red</span></p>
                 </li>
                 <li class= "lead mb-1 text-white">
-                  <p><strong>Status:</strong><span class="text-success"><strong> ACCEPTING DEPOSITS</strong></span></p>
+                  <p><strong>Status:</strong><span class="text-success"><strong> TAKING DEPOSITS</strong></span></p>
                 </li>
               </ul>
             </div>
@@ -194,10 +239,10 @@
           <div class="col-lg-4">
             <h5>Green Boy</h5>
             <div class="video-cover rounded">
-              <img alt="Image" src="assets/img/logo.svg" class="bg-image" />
+              <!--<img alt="Image" src="assets/img/logo.svg" class="bg-image" />-->
               <div class="video-play-icon"></div>
               <div class="embed-responsive embed-responsive-16by9">
-                <iframe class="embed-responsive-item" data-src="https://www.youtube.com/embed?listType=playlist&amp;list=PLwLcj9Fs1Kosc3EKZ09vkpNQ2BC7y65vl&amp;rel=0;autoplay=1&amp;controls=0"
+                <iframe class="embed-responsive-item" data-src="https://www.youtube.com/embed?listType=playlist&amp;list=PLwLcj9Fs1Kov8hU_MDEvdIvk-WzV_UxFX&amp;rel=0;autoplay=1&amp;controls=0"
                 allowfullscreen allow="autoplay; encrypted-media"></iframe>
               </div>
             </div>
@@ -205,10 +250,10 @@
           <div class="col-lg-4">
             <h5>Blue Boy</h5>
             <div class="video-cover rounded">
-              <img alt="Image" src="assets/img/logo.svg" class="bg-image" />
+              <!--<img alt="Image" src="assets/img/logo.svg" class="bg-image" />-->
               <div class="video-play-icon"></div>
               <div class="embed-responsive embed-responsive-16by9">
-                <iframe class="embed-responsive-item" data-src="https://www.youtube.com/embed?listType=playlist&amp;list=PLwLcj9Fs1Kosc3EKZ09vkpNQ2BC7y65vl&amp;rel=0;autoplay=1&amp;controls=0"
+                <iframe class="embed-responsive-item" data-src="https://www.youtube.com/embed?listType=playlist&amp;list=PLwLcj9Fs1KosGYNu5lBipG_GE09jPKoG6&amp;rel=0;autoplay=1&amp;controls=0"
                 allowfullscreen allow="autoplay; encrypted-media"></iframe>
               </div>
             </div>
@@ -216,10 +261,10 @@
           <div class="col-lg-4">
             <h5>Red Boy</h5>
             <div class="video-cover rounded">
-              <img alt="Image" src="assets/img/logo.svg" class="bg-image" />
+              <!--<img alt="Image" src="assets/img/logo.svg" class="bg-image" />-->
               <div class="video-play-icon"></div>
               <div class="embed-responsive embed-responsive-16by9">
-                <iframe class="embed-responsive-item" data-src="https://www.youtube.com/embed?listType=playlist&amp;list=PLwLcj9Fs1Kosc3EKZ09vkpNQ2BC7y65vl&amp;rel=0;autoplay=1&amp;controls=0"
+                <iframe class="embed-responsive-item" data-src="https://www.youtube.com/embed?listType=playlist&amp;list=PLwLcj9Fs1KouFsUWH3XZ-A3CeU07s52yE&amp;rel=0;autoplay=1&amp;controls=0"
                 allowfullscreen allow="autoplay; encrypted-media"></iframe>
               </div>
             </div>
@@ -229,10 +274,10 @@
           <div class="col-lg-4">
             <h5>Pink Girl</h5>
             <div class="video-cover rounded">
-              <img alt="Image" src="assets/img/logo.svg" class="bg-image" />
+              <!--<img alt="Image" src="assets/img/logo.svg" class="bg-image" />-->
               <div class="video-play-icon"></div>
               <div class="embed-responsive embed-responsive-16by9">
-                <iframe class="embed-responsive-item" data-src="https://www.youtube.com/embed?listType=playlist&amp;list=PLwLcj9Fs1Kosc3EKZ09vkpNQ2BC7y65vl&amp;rel=0;autoplay=1&amp;controls=0"
+                <iframe class="embed-responsive-item" data-src="https://www.youtube.com/embed?listType=playlist&amp;list=PLwLcj9Fs1KovkP2q0VtpcBBQaxunCVg7e&amp;rel=0;autoplay=1&amp;controls=0"
                 allowfullscreen allow="autoplay; encrypted-media"></iframe>
               </div>
             </div>
@@ -240,10 +285,10 @@
           <div class="col-lg-4">
             <h5>Purple Girl</h5>
             <div class="video-cover rounded">
-              <img alt="Image" src="assets/img/logo.svg" class="bg-image" />
+              <!--<img alt="Image" src="assets/img/logo.svg" class="bg-image" />-->
               <div class="video-play-icon"></div>
               <div class="embed-responsive embed-responsive-16by9">
-                <iframe class="embed-responsive-item" data-src="https://www.youtube.com/embed?listType=playlist&amp;list=PLwLcj9Fs1Kosc3EKZ09vkpNQ2BC7y65vl&amp;rel=0;autoplay=1&amp;controls=0"
+                <iframe class="embed-responsive-item" data-src="https://www.youtube.com/embed?listType=playlist&amp;list=PLwLcj9Fs1KosKqzLcHImOdbvXyw8O-kWU&amp;rel=0;autoplay=1&amp;controls=0"
                 allowfullscreen allow="autoplay; encrypted-media"></iframe>
               </div>
             </div>
@@ -251,10 +296,10 @@
           <div class="col-lg-4">
             <h5>Yellow Girl</h5>
             <div class="video-cover rounded">
-              <img alt="Image" src="assets/img/logo.svg" class="bg-image" />
+              <!--<img alt="Image" src="assets/img/logo.svg" class="bg-image" />-->
               <div class="video-play-icon"></div>
               <div class="embed-responsive embed-responsive-16by9">
-                <iframe class="embed-responsive-item" data-src="https://www.youtube.com/embed?listType=playlist&amp;list=PLwLcj9Fs1Kosc3EKZ09vkpNQ2BC7y65vl&amp;rel=0;autoplay=1&amp;controls=0"
+                <iframe class="embed-responsive-item" data-src="https://www.youtube.com/embed?listType=playlist&amp;list=PLwLcj9Fs1Kov0voWJ0rhh5YnInzTuaXL6&amp;rel=0;autoplay=1&amp;controls=0"
                 allowfullscreen allow="autoplay; encrypted-media"></iframe>
               </div>
             </div>
@@ -264,10 +309,10 @@
           <div class="col-lg-4">
             <h5>Black Boy</h5>
             <div class="video-cover rounded">
-              <img alt="Image" src="assets/img/logo.svg" class="bg-image" />
+              <!--<img alt="Image" src="assets/img/logo.svg" class="bg-image" />-->
               <div class="video-play-icon"></div>
               <div class="embed-responsive embed-responsive-16by9">
-                <iframe class="embed-responsive-item" data-src="https://www.youtube.com/embed?listType=playlist&amp;list=PLwLcj9Fs1Kosc3EKZ09vkpNQ2BC7y65vl&amp;rel=0;autoplay=1&amp;controls=0"
+                <iframe class="embed-responsive-item" data-src="https://www.youtube.com/embed?listType=playlist&amp;list=PLwLcj9Fs1Kou5oEuzSyVuOe4fl90lmaJl&amp;rel=0;autoplay=1&amp;controls=0"
                 allowfullscreen allow="autoplay; encrypted-media"></iframe>
               </div>
             </div>
@@ -275,10 +320,10 @@
           <div class="col-lg-4">
             <h5>White Girl</h5>
             <div class="video-cover rounded">
-              <img alt="Image" src="assets/img/logo.svg" class="bg-image" />
+              <!--<img alt="Image" src="assets/img/logo.svg" class="bg-image" />-->
               <div class="video-play-icon"></div>
               <div class="embed-responsive embed-responsive-16by9">
-                <iframe class="embed-responsive-item" data-src="https://www.youtube.com/embed?listType=playlist&amp;list=PLwLcj9Fs1Kosc3EKZ09vkpNQ2BC7y65vl&amp;rel=0;autoplay=1&amp;controls=0"
+                <iframe class="embed-responsive-item" data-src="https://www.youtube.com/embed?listType=playlist&amp;list=PLwLcj9Fs1KosrH1qrXrs0rLifmS4vYtQ5&amp;rel=0;autoplay=1&amp;controls=0"
                 allowfullscreen allow="autoplay; encrypted-media"></iframe>
               </div>
             </div>
@@ -286,10 +331,10 @@
           <div class="col-lg-4">
             <h5>Orange Girl</h5>
             <div class="video-cover rounded">
-              <img alt="Image" src="assets/img/logo.svg" class="bg-image" />
+              <!--<img alt="Image" src="assets/img/logo.svg" class="bg-image" />-->
               <div class="video-play-icon"></div>
               <div class="embed-responsive embed-responsive-16by9">
-                <iframe class="embed-responsive-item" data-src="https://www.youtube.com/embed?listType=playlist&amp;list=PLwLcj9Fs1Kosc3EKZ09vkpNQ2BC7y65vl&amp;rel=0;autoplay=1&amp;controls=0"
+                <iframe class="embed-responsive-item" data-src="https://www.youtube.com/embed?listType=playlist&amp;list=PLwLcj9Fs1Kota8InbzjcyMnmwQmsYotAg&amp;rel=0;autoplay=1&amp;controls=0"
                 allowfullscreen allow="autoplay; encrypted-media"></iframe>
               </div>
             </div>
@@ -298,72 +343,6 @@
       </div>
     </section>
 
- <!--
-    <section class="bg-white">
-      <div class="container">
-        <div class="row">
-          <div class="col-12 col-md-4 card">
-            <img class="card-img opacity-90" src="assets/img/card-image-background-1.jpg" alt="Small Business" />
-            <div class="card-img-overlay">
-              <span class="mb-0 h5 text-white">Small Business</span>
-            </div>
-          </div>
-          <div class="col-12 col-md-4 card">
-            <img class="card-img opacity-90" src="assets/img/card-image-background-1.jpg" alt="Small Business" />
-            <div class="card-img-overlay">
-              <span class="mb-0 h5 text-white">Small Business</span>
-            </div>
-          </div>
-          <div class="col-12 col-md-4 card">
-            <img class="card-img opacity-90" src="assets/img/card-image-background-1.jpg" alt="Small Business" />
-            <div class="card-img-overlay">
-              <span class="mb-0 h5 text-white">Small Business</span>
-            </div>
-          </div>
-        </div>  
-        <div class="row">
-          <div class="col-12 col-md-4 card">
-            <img class="card-img opacity-90" src="assets/img/card-image-background-1.jpg" alt="Small Business" />
-            <div class="card-img-overlay">
-              <span class="mb-0 h5 text-white">Small Business</span>
-            </div>
-          </div>
-          <div class="col-12 col-md-4 card">
-            <img class="card-img opacity-90" src="assets/img/card-image-background-1.jpg" alt="Small Business" />
-            <div class="card-img-overlay">
-              <span class="mb-0 h5 text-white">Small Business</span>
-            </div>
-          </div>
-          <div class="col-12 col-md-4 card">
-            <img class="card-img opacity-90" src="assets/img/card-image-background-1.jpg" alt="Small Business" />
-            <div class="card-img-overlay">
-              <span class="mb-0 h5 text-white">Small Business</span>
-            </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-12 col-md-4 card">
-            <img class="card-img opacity-90" src="assets/img/card-image-background-1.jpg" alt="Small Business" />
-            <div class="card-img-overlay">
-              <span class="mb-0 h5 text-white">Small Business</span>
-            </div>
-          </div>
-          <div class="col-12 col-md-4 card">
-            <img class="card-img opacity-90" src="assets/img/card-image-background-1.jpg" alt="Small Business" />
-            <div class="card-img-overlay">
-              <span class="mb-0 h5 text-white">Small Business</span>
-            </div>
-          </div>
-          <div class="col-12 col-md-4 card">
-            <img class="card-img opacity-90" src="assets/img/card-image-background-1.jpg" alt="Small Business" />
-            <div class="card-img-overlay">
-              <span class="mb-0 h5 text-white">Small Business</span>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
--->
     <section class="bg-gray">
       <div class="container">
         <div class="row justify-content-center">
