--- a/html/stimulation.html
+++ b/html/stimulation.html
@@ -40,7 +40,7 @@
             <li class="dropdown">
               <a class="nav-link h5 dropdown-toggle" href="dogs.html" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" id="pages-dropdown">Our Dogs</a>
               <div class="dropdown-menu p-0 o-hidden" aria-labelledby="pages-dropdown">
-                  <a class="dropdown-item" href="dogs.html">Maiva &amp; Rio</a>
+                  <a class="dropdown-item" href="dogs.html">Meet The Parents</a>
                   <a class="dropdown-item" href="dogs.html#generations">Doodle Generations</a>
               </div>
             </li>
