Remove test gallery from master

--- a/html/puppies.html
+++ b/html/puppies.html
@@ -213,7 +213,7 @@
       </div>
     </section>
 
-    <section class="bg-white">
+    <section class="bg-white" id="movie-mondays">
       <div class="container">
         <div class="row justify-content-around py-5">
           <div class="col-lg-5 align-self-center mb-3 mb-lg-0">
