--- a/html/gallery.html
+++ b/html/gallery.html
@@ -93,137 +93,137 @@
       </div>
     </section>
     
-    <section class="bg-white">
-      <div class="container">
-        <div class="row justify-content-center">
-          <div class="col-xl-12 col-lg-12">
-            <article>
-              <h3>Search By Hashtag</h3>
-              <a href="#" class="btn btn-primary btn-sm">#test</a>
-              <a href="#" class="btn btn-primary btn-sm">#test</a>
-              <a href="#" class="btn btn-primary btn-sm">#test</a>
-            </article>
-          </div>
-        </div>
-      </div> 
-      <div class="container py-4">
-        <div class="row">
-          <div class="col-12 col-md-3 card">
-            <img class="card-img opacity-90" src="assets/img/card-image-background-1.jpg" alt="Small Business" />
-            <div class="card-img-overlay">
-              <span class="mb-0 h5 text-white">Small Business</span>
-            </div>
-          </div>
-          <div class="col-12 col-md-3 card">
-            <img class="card-img opacity-90" src="assets/img/card-image-background-1.jpg" alt="Small Business" />
-            <div class="card-img-overlay">
-              <span class="mb-0 h5 text-white">Small Business</span>
-            </div>
-          </div>
-          <div class="col-12 col-md-3 card">
-            <img class="card-img opacity-90" src="assets/img/card-image-background-1.jpg" alt="Small Business" />
-            <div class="card-img-overlay">
-              <span class="mb-0 h5 text-white">Small Business</span>
-            </div>
-          </div>
-          <div class="col-12 col-md-3 card">
-            <img class="card-img opacity-90" src="assets/img/card-image-background-1.jpg" alt="Small Business" />
-            <div class="card-img-overlay">
-              <span class="mb-0 h5 text-white">Small Business</span>
-            </div>
-          </div>
-        </div>  
-        <div class="row">
-          <div class="col-12 col-md-3 card">
-            <img class="card-img opacity-90" src="assets/img/card-image-background-1.jpg" alt="Small Business" />
-            <div class="card-img-overlay">
-              <span class="mb-0 h5 text-white">Small Business</span>
-            </div>
-          </div>
-          <div class="col-12 col-md-3 card">
-            <img class="card-img opacity-90" src="assets/img/card-image-background-1.jpg" alt="Small Business" />
-            <div class="card-img-overlay">
-              <span class="mb-0 h5 text-white">Small Business</span>
-            </div>
-          </div>
-          <div class="col-12 col-md-3 card">
-            <img class="card-img opacity-90" src="assets/img/card-image-background-1.jpg" alt="Small Business" />
-            <div class="card-img-overlay">
-              <span class="mb-0 h5 text-white">Small Business</span>
-            </div>
-          </div>
-          <div class="col-12 col-md-3 card">
-            <img class="card-img opacity-90" src="assets/img/card-image-background-1.jpg" alt="Small Business" />
-            <div class="card-img-overlay">
-              <span class="mb-0 h5 text-white">Small Business</span>
-            </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-12 col-md-3 card">
-            <img class="card-img opacity-90" src="assets/img/card-image-background-1.jpg" alt="Small Business" />
-            <div class="card-img-overlay">
-              <span class="mb-0 h5 text-white">Small Business</span>
-            </div>
-          </div>
-          <div class="col-12 col-md-3 card">
-            <img class="card-img opacity-90" src="assets/img/card-image-background-1.jpg" alt="Small Business" />
-            <div class="card-img-overlay">
-              <span class="mb-0 h5 text-white">Small Business</span>
-            </div>
-          </div>
-          <div class="col-12 col-md-3 card">
-            <img class="card-img opacity-90" src="assets/img/card-image-background-1.jpg" alt="Small Business" />
-            <div class="card-img-overlay">
-              <span class="mb-0 h5 text-white">Small Business</span>
-            </div>
-          </div>
-          <div class="col-12 col-md-3 card">
-            <img class="card-img opacity-90" src="assets/img/card-image-background-1.jpg" alt="Small Business" />
-            <div class="card-img-overlay">
-              <span class="mb-0 h5 text-white">Small Business</span>
-            </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-12 col-md-3 card">
-            <img class="card-img opacity-90" src="assets/img/card-image-background-1.jpg" alt="Small Business" />
-            <div class="card-img-overlay">
-              <span class="mb-0 h5 text-white">Small Business</span>
-            </div>
-          </div>
-          <div class="col-12 col-md-3 card">
-            <img class="card-img opacity-90" src="assets/img/card-image-background-1.jpg" alt="Small Business" />
-            <div class="card-img-overlay">
-              <span class="mb-0 h5 text-white">Small Business</span>
-            </div>
-          </div>
-          <div class="col-12 col-md-3 card">
-            <img class="card-img opacity-90" src="assets/img/card-image-background-1.jpg" alt="Small Business" />
-            <div class="card-img-overlay">
-              <span class="mb-0 h5 text-white">Small Business</span>
-            </div>
-          </div>
-          <div class="col-12 col-md-3 card">
-            <img class="card-img opacity-90" src="assets/img/card-image-background-1.jpg" alt="Small Business" />
-            <div class="card-img-overlay">
-              <span class="mb-0 h5 text-white">Small Business</span>
-            </div>
-          </div>
-        </div>
-      </div>  
-    </section>
-    
-    <section class="bg-gray">
-      <div class="container">
-        <div class="row justify-content-center">
-          <div class="col col-12 text-center">
-            <span class="d-block mb-3 h2">Want to see more cuteness?</span>
-            <a class="btn btn-primary btn-lg" href="https://www.instagram.com/trailsandtailsdoodles/">Visit Our Instagram</a>
-          </div>
-        </div>
-      </div>
-    </section>
+<!--    <section class="bg-white">-->
+<!--      <div class="container">-->
+<!--        <div class="row justify-content-center">-->
+<!--          <div class="col-xl-12 col-lg-12">-->
+<!--            <article>-->
+<!--              <h3>Search By Hashtag</h3>-->
+<!--              <a href="#" class="btn btn-primary btn-sm">#test</a>-->
+<!--              <a href="#" class="btn btn-primary btn-sm">#test</a>-->
+<!--              <a href="#" class="btn btn-primary btn-sm">#test</a>-->
+<!--            </article>-->
+<!--          </div>-->
+<!--        </div>-->
+<!--      </div>-->
+<!--      <div class="container py-4">-->
+<!--        <div class="row">-->
+<!--          <div class="col-12 col-md-3 card">-->
+<!--            <img class="card-img opacity-90" src="assets/img/card-image-background-1.jpg" alt="Small Business" />-->
+<!--            <div class="card-img-overlay">-->
+<!--              <span class="mb-0 h5 text-white">Small Business</span>-->
+<!--            </div>-->
+<!--          </div>-->
+<!--          <div class="col-12 col-md-3 card">-->
+<!--            <img class="card-img opacity-90" src="assets/img/card-image-background-1.jpg" alt="Small Business" />-->
+<!--            <div class="card-img-overlay">-->
+<!--              <span class="mb-0 h5 text-white">Small Business</span>-->
+<!--            </div>-->
+<!--          </div>-->
+<!--          <div class="col-12 col-md-3 card">-->
+<!--            <img class="card-img opacity-90" src="assets/img/card-image-background-1.jpg" alt="Small Business" />-->
+<!--            <div class="card-img-overlay">-->
+<!--              <span class="mb-0 h5 text-white">Small Business</span>-->
+<!--            </div>-->
+<!--          </div>-->
+<!--          <div class="col-12 col-md-3 card">-->
+<!--            <img class="card-img opacity-90" src="assets/img/card-image-background-1.jpg" alt="Small Business" />-->
+<!--            <div class="card-img-overlay">-->
+<!--              <span class="mb-0 h5 text-white">Small Business</span>-->
+<!--            </div>-->
+<!--          </div>-->
+<!--        </div>-->
+<!--        <div class="row">-->
+<!--          <div class="col-12 col-md-3 card">-->
+<!--            <img class="card-img opacity-90" src="assets/img/card-image-background-1.jpg" alt="Small Business" />-->
+<!--            <div class="card-img-overlay">-->
+<!--              <span class="mb-0 h5 text-white">Small Business</span>-->
+<!--            </div>-->
+<!--          </div>-->
+<!--          <div class="col-12 col-md-3 card">-->
+<!--            <img class="card-img opacity-90" src="assets/img/card-image-background-1.jpg" alt="Small Business" />-->
+<!--            <div class="card-img-overlay">-->
+<!--              <span class="mb-0 h5 text-white">Small Business</span>-->
+<!--            </div>-->
+<!--          </div>-->
+<!--          <div class="col-12 col-md-3 card">-->
+<!--            <img class="card-img opacity-90" src="assets/img/card-image-background-1.jpg" alt="Small Business" />-->
+<!--            <div class="card-img-overlay">-->
+<!--              <span class="mb-0 h5 text-white">Small Business</span>-->
+<!--            </div>-->
+<!--          </div>-->
+<!--          <div class="col-12 col-md-3 card">-->
+<!--            <img class="card-img opacity-90" src="assets/img/card-image-background-1.jpg" alt="Small Business" />-->
+<!--            <div class="card-img-overlay">-->
+<!--              <span class="mb-0 h5 text-white">Small Business</span>-->
+<!--            </div>-->
+<!--          </div>-->
+<!--        </div>-->
+<!--        <div class="row">-->
+<!--          <div class="col-12 col-md-3 card">-->
+<!--            <img class="card-img opacity-90" src="assets/img/card-image-background-1.jpg" alt="Small Business" />-->
+<!--            <div class="card-img-overlay">-->
+<!--              <span class="mb-0 h5 text-white">Small Business</span>-->
+<!--            </div>-->
+<!--          </div>-->
+<!--          <div class="col-12 col-md-3 card">-->
+<!--            <img class="card-img opacity-90" src="assets/img/card-image-background-1.jpg" alt="Small Business" />-->
+<!--            <div class="card-img-overlay">-->
+<!--              <span class="mb-0 h5 text-white">Small Business</span>-->
+<!--            </div>-->
+<!--          </div>-->
+<!--          <div class="col-12 col-md-3 card">-->
+<!--            <img class="card-img opacity-90" src="assets/img/card-image-background-1.jpg" alt="Small Business" />-->
+<!--            <div class="card-img-overlay">-->
+<!--              <span class="mb-0 h5 text-white">Small Business</span>-->
+<!--            </div>-->
+<!--          </div>-->
+<!--          <div class="col-12 col-md-3 card">-->
+<!--            <img class="card-img opacity-90" src="assets/img/card-image-background-1.jpg" alt="Small Business" />-->
+<!--            <div class="card-img-overlay">-->
+<!--              <span class="mb-0 h5 text-white">Small Business</span>-->
+<!--            </div>-->
+<!--          </div>-->
+<!--        </div>-->
+<!--        <div class="row">-->
+<!--          <div class="col-12 col-md-3 card">-->
+<!--            <img class="card-img opacity-90" src="assets/img/card-image-background-1.jpg" alt="Small Business" />-->
+<!--            <div class="card-img-overlay">-->
+<!--              <span class="mb-0 h5 text-white">Small Business</span>-->
+<!--            </div>-->
+<!--          </div>-->
+<!--          <div class="col-12 col-md-3 card">-->
+<!--            <img class="card-img opacity-90" src="assets/img/card-image-background-1.jpg" alt="Small Business" />-->
+<!--            <div class="card-img-overlay">-->
+<!--              <span class="mb-0 h5 text-white">Small Business</span>-->
+<!--            </div>-->
+<!--          </div>-->
+<!--          <div class="col-12 col-md-3 card">-->
+<!--            <img class="card-img opacity-90" src="assets/img/card-image-background-1.jpg" alt="Small Business" />-->
+<!--            <div class="card-img-overlay">-->
+<!--              <span class="mb-0 h5 text-white">Small Business</span>-->
+<!--            </div>-->
+<!--          </div>-->
+<!--          <div class="col-12 col-md-3 card">-->
+<!--            <img class="card-img opacity-90" src="assets/img/card-image-background-1.jpg" alt="Small Business" />-->
+<!--            <div class="card-img-overlay">-->
+<!--              <span class="mb-0 h5 text-white">Small Business</span>-->
+<!--            </div>-->
+<!--          </div>-->
+<!--        </div>-->
+<!--      </div>-->
+<!--    </section>-->
+<!--    -->
+<!--    <section class="bg-gray">-->
+<!--      <div class="container">-->
+<!--        <div class="row justify-content-center">-->
+<!--          <div class="col col-12 text-center">-->
+<!--            <span class="d-block mb-3 h2">Want to see more cuteness?</span>-->
+<!--            <a class="btn btn-primary btn-lg" href="https://www.instagram.com/trailsandtailsdoodles/">Visit Our Instagram</a>-->
+<!--          </div>-->
+<!--        </div>-->
+<!--      </div>-->
+<!--    </section>-->
 
     <footer class="spacer-y-3 bg-dark">
       <div class="container">
