correct javascript on contact form

--- a/html/contact.html
+++ b/html/contact.html
@@ -36,11 +36,11 @@
 
            var fullname = $("#fullname").val();
            var email = $("#email").val();
-           var message = $("message").val();
+           var message = $("#message").val();
            var data = {
               fullname : fullname,
               email : email,
-              message : message,
+              message : message
             };
 
            $.ajax({
