--- a/html/adopt.html
+++ b/html/adopt.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
     <title>Trails &amp; Tails Doodles | How To Adopt?</title>
+    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="A corporate Bootstrap theme by Medium Rare">
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
