--- a/html/testimonials.html
+++ b/html/testimonials.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
     <title>Trails &amp; Tails Doodles | Testimonials</title>
+    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Our mission is to provide Goldendoodle puppies that are healthy and happy to responsible families who will love and care for them throughout their lives.">
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
